--- a/Monday_Assignment_06_17_24.ipynb
+++ b/Monday_Assignment_06_17_24.ipynb
@@ -9,14 +9,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 162,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "2024-06-17 17:51:08.458810\n",
+      "2024-06-17 18:33:23.937727\n",
       "2024-06-17\n",
       "171 days \n"
      ]
@@ -46,7 +46,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 163,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -88,7 +88,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 164,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -117,7 +117,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 165,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -146,9 +146,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 166,
+   "execution_count": 9,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'SQUARES': [1, 4, 9, 16, 25, 36, 49, 64, 81, 100], 'EVEN_SQUARES': [4, 16, 36, 64, 100]}\n"
+     ]
+    }
+   ],
    "source": [
     "# 1. Use a list comprehension to create a list of squares of integers from 1 to 10.\n",
     "list_squares = [(i+1)*(i+1) for i in range(10)]\n",
@@ -164,7 +172,7 @@
     "new_dict = {}\n",
     "new_dict[\"SQUARES\"] = list_squares\n",
     "new_dict[\"EVEN_SQUARES\"] = even_squares\n",
-    "#print(new_dict)"
+    "print(new_dict)"
    ]
   },
   {
@@ -176,7 +184,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 167,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -189,17 +197,27 @@
    ],
    "source": [
     "# 1. Parse a string into a datetime object.\n",
+    "import datetime\n",
     "from datetime import timedelta\n",
     "\n",
     "date_object = datetime.datetime.strptime(\"06-17-2024\", \"%m-%d-%Y\")\n",
     "#print(date_object.date())\n",
     "\n",
     "# 2. Create a function that takes two dates and returns the number of weekdays between them.\n",
+    "\n",
     "first_date = datetime.datetime.strptime(\"06-17-2024\", \"%m-%d-%Y\")\n",
     "second_date = datetime.datetime.strptime(\"07-04-2024\", \"%m-%d-%Y\")\n",
-    "days_inbetween = (first_date + timedelta(x + 1) for x in range((second_date - first_date).days))\n",
-    "count = sum(1 for day in days_inbetween if day.weekday() < 5)\n",
-    "print(count)\n",
+    "\n",
+    "def weekdays_inbetween(first_date, second_date):\n",
+    "    days_inbetween = (first_date + timedelta(x + 1) for x in range((second_date - first_date).days))\n",
+    "    ctr = sum(1 for day in days_inbetween if day.weekday() < 5)\n",
+    "    return ctr\n",
+    "\n",
+    "print(weekdays_inbetween(first_date, second_date))\n",
+    "\n",
+    "#days_inbetween = (first_date + timedelta(x + 1) for x in range((second_date - first_date).days))\n",
+    "#ctr = sum(1 for day in days_inbetween if day.weekday() < 5)\n",
+    "#print(ctr)\n",
     "\n",
     "\n",
     "# 3. Create a function that accepts a start date, end date, meeting datetime, and interval and returns all occurrences of the event within that timeframe.\n"
@@ -214,13 +232,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 171,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "86.5\n",
       "Michael\n"
      ]
     }
@@ -230,11 +249,11 @@
     "dict_list = [{\"name\": \"Kevin\", \"grade\": 75}, {\"name\": \"Michael\", \"grade\": 100}, \n",
     "             {\"name\": \"John\", \"grade\": 82}, {\"name\": \"Jerry\", \"grade\": 89}]\n",
     "# 2. Calculate the average grade of the students.\n",
-    "sum = 0\n",
+    "student_sum = 0\n",
     "for i in dict_list:\n",
-    "    sum += i[\"grade\"]\n",
-    "avg = (sum / len(dict_list))\n",
-    "#print(avg)\n",
+    "    student_sum += i[\"grade\"]\n",
+    "avg = (student_sum / len(dict_list))\n",
+    "print(avg)\n",
     "\n",
     "# 3. Find the student with the highest grade.\n",
     "\n",
@@ -244,7 +263,7 @@
     "    if i[\"grade\"] > curr_max:\n",
     "        curr_max = i[\"grade\"]\n",
     "        highest_student = i[\"name\"]\n",
-    "#print(highest_student)"
+    "print(highest_student)"
    ]
   }
  ],
