--- a/Tuesday_Assignment_06_18_2024.ipynb
+++ b/Tuesday_Assignment_06_18_2024.ipynb
@@ -48,15 +48,15 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Excercise 2: Regular Expressions\n",
+    "# Excercise 2: Regular Expressions\n",
     "\n",
-    "Build regular expressions that matches patterns with the following constraints:\n",
+    " - Build regular expressions that matches patterns with the following constraints:\n",
     "\n",
-    "Any word at the begging of a string\n",
-    "Any time that the character after a whitespace is a digit\n",
-    "any word with punctuation at the end of a string\n",
-    "any occurances of consecutive digits 1,2, or 3\n",
-    "any word with double letters (i.e. letter, filler, skill, parrot)"
+    "    - Any word at the begging of a string\n",
+    "    - Any time that the character after a whitespace is a digit\n",
+    "    - any word with punctuation at the end of a string\n",
+    "    - any occurances of consecutive digits 1,2, or 3\n",
+    "    - any word with double letters (i.e. letter, filler, skill, parrot)"
    ]
   },
   {
